[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI.gd" type="Script" id=1]
[ext_resource path="res://GFX/Fonts/CasualTheme.tres" type="Theme" id=2]

[node name="UI" type="Node" groups=[
"GameState",
"UnitState",
]]
script = ExtResource( 1 )

[node name="BottomBar" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -80.0
margin_right = -15.0
margin_bottom = -15.0

[node name="VersionLabel" type="Label" parent="BottomBar"]
margin_right = 328.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource( 2 )
text = "Version Label"
valign = 2

[node name="DebugLabel" type="Label" parent="BottomBar"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource( 2 )
text = "Debug Label"
align = 1
valign = 2

[node name="TimerLabel" type="Label" parent="BottomBar"]
margin_left = 664.0
margin_right = 994.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource( 2 )
text = "Timer Label"
align = 2
valign = 2

[node name="TopBar" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0

[node name="GameLabel" type="Label" parent="TopBar"]
margin_right = 265.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 2 )
text = "Game Label"

[node name="ActionLabel" type="Label" parent="TopBar"]
margin_left = 269.0
margin_right = 534.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource( 2 )
text = "Action Label"
align = 1

[node name="NetworkStatusLabel" type="Label" parent="TopBar"]
margin_left = 538.0
margin_right = 994.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource( 2 )
text = "Network Status Label"
align = 2
